fix(perf): measure the client's CPU, not its worst sample, and stop excluding the knee
The rig capped every published figure at ~23,800 rps by excluding 12 of 14
ladder rungs. Both exclusion criteria were measuring the wrong thing.

k6's per-rung CPU was the MAX sample in the window. SETTLE_S is 3s and the
sampler polls every 3s, so the first rung caught `docker stats --no-stream`'s
cold reading — 1183% against a VU pool 1% occupied, while the 28,000 rung
needing far more work read 457%. Non-monotonic noise, not saturation. Now the
mean over the steady window gates, the first reading is dropped, and the max is
recorded alongside for the spread. Mean rather than p95 because a rung holds
only ~4 samples, where p95 approximates the max and would re-admit the spike.

The drop clause required `vus_active_p95 < pool`, true even at 95% occupancy,
so rungs where the VU pool was pinned — VUs blocked on server responses, which
is the knee the sweep exists to find — were discarded as client-limited. The
discriminator is now an occupancy ratio: at or above 0.80 the server is the
constraint, so keep the rung and mark it the knee; below it, drops over
tolerance mean the client could not schedule. Missing occupancy or pool still
falls back to strict zero-drop. 0.80 sits in the widest gap in the observed
data (pinned rungs 0.86-0.95, idle pools 0.01-0.02) and is overridable.

Replaying build 420 lifts its rig-valid peak from 23,872 to between 40,886 and
43,672, reconciling the gate with the all-rungs headline it had been
contradicting. Only the 8,000 and 28,000 rungs stay excluded, both correctly.

k6 moves to cpus 11-23 so a ten-vCPU server arm needs no second cpuset, and
phys_core_count() records real core counts per cpuset so a published figure can
state cores rather than vCPUs, returning null rather than a guess when the
topology is unreadable.

Adds a large-heap profile with a fail-closed proportionality assertion: a run
where neither event-log bound was approached is reported